# django-models

./: .gitignore  README.md  pyproject.toml
snack_tracker_project/: asgi.py  settings.py  urls.py  wsgi.py
snacks/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
snacks/migrations/: 0001_initial.py
snacks/static/: style.css
templates/: base.html  snack_detail.html  snack_list.html
